# tempo

./: .gitignore  Makefile  Makefile.am  README  configure.ac  index.html  param_idx.txt  reference_manual.html  tempo.cfg  tempo.cfg.in  tempo.hlp  tempo11_003_install.html  tempo_idx.html  tempo_install.html  tempo_update.html  upload
clock/: Makefile.am  Makefile.in  bipmnist.01.extrap  bipmnist.12.extrap  bipmnist.12.extrap.extralong  bipmnist.14  bipmnist.19.extrap  leap.sec
doc/: Makefile  Makefile.am  Makefile.in  index.html  param_idx.txt  reference_manual.html  tempo11.000_install.html  tempo11.html  tempo_idx.html  tempo_install.html  tempo_update.html  upload_gh
doc/ref_man_sections/: Makefile.in  binary.txt  control.txt  ecliptic.txt  obsys.txt  options.txt  parameter.txt  toa.txt  tz-in.txt
ephem/: Makefile.am
ref_man_sections/: Makefile.am  Makefile.in  binary.txt  clock.txt  config.txt  control.txt  obsys.txt  options.txt  parameter.txt  toa.txt  toacommand.txt  tz-polyco.txt
src/: Makefile  Makefile.am  Makefile.in  acom.h  array.h  arrtim.f  atimfake.f  bigendian.f  bigendian.f.in  bnrybt.f  bnrybtx.f  bnrydd.f  bnryddfwhiecc.f  bnryddgr.f  bnryddk.f  bnrydds.f  bnryell1.f  bnrymss.f  bootmc.f  bt2ell1.f  cfgin.f  clockcor.f  clocks.h  config.h.in  covar.f  cutil.c  damoyr.f  dim.h  dp.h  ell12bt.f  eph.h  ephinit.f  ephread.f  equ2ecl.f  error_handler.f  fit.f  flagcom.h  gasdev.f  getcmdline.f  getecliptic.f  (+44 more)
test/: .cvsignore  0437-4715.par.original  0437.par  Makefile  Makefile.in  tempo.cfg  tempo.lis.original
util/: README
util/center_epoch/: center_epoch.py
util/compare_tempo/: compare_tempo
util/cull/: cull.pl
util/dmx/: dmx_cleanup.py  dmx_info.py  dmx_median_adjust.py
util/dmx_ranges/: DMX_ranges2.py
util/dmxparse/: dmxparse  dmxparse.py
util/extract/: extract.pl
util/lk/: lk.f
util/non_tempo/: README
util/obswgt/: obswgt.pl
util/print_resid/: print_resid.c  tempo_output.h
util/pubpar/: pubpar.py
util/res_avg/: res_avg
util/ut1/: make_ut1  predict_ut1.c
util/wgttpo/: README
