bin_PROGRAMS = tempo

EXTRA_PROGRAMS = matrix tdbgen
CLEANFILES = $(EXTRA_PROGRAMS)

tempo_SOURCES = \
        a1ut1f.f a1utcf.f ang.f arrtim.f atimfake.f bigendian.f \
        blkdbat.f bnrybt.f bnrybtx.f bnrydd.f bnryddgr.f bnryddt.f  \
        bnryeh.f bnryell1.f bnrymss.f bootmc.f bt2ell1.f \
        chebpc.f citem.f clockcor.f covar.f damoyr.f dot.f \
        earth.f  ephinit.f ephread.f equ2ecl.f fit.f fk4tofk5.f galco.f \
        gasdev.f inpar.f interp.f lmst.f mass2dd.f matinv.f mxprt.f newbin.f \
        newsrc.f newval.f nutation.f obsite.f outpar.f pcard.f pcshft.f \
        pospm_conv.f prcnut.f precession.f propmo.f radian.f ran1.f resid.f \
        setup.f sitea2n.f siten2a.f \
	sort.f space_motion.f ell12bt.f tdbinit.f tdbinit2.f tdbread.f tempo.f \
        timcalc.f tmalloc.f tparin.f tpohdr.f tzfit.f tzinit.f ut1red.f \
        vmemw.f  ztim.f \
        cutil.c \
        acom.h array.h dim.h bcom.h clocks.h dp.h eph.h ephcom.h glitch.h \
	orbit.h tdbcom.h trnsfr.h tz.h vcom.h toa.h 

matrix_SOURCES = matrix.f

tdbgen_SOURCES = tdbgen.f tdb1ns.f bigendian.f cutil.c
